@@ -24,10 +24,9 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
-import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
 
@@ -57,12 +56,7 @@ public abstract class MavenRepositoryService {
       if (entry.getValue() == null) {
         return null;
       }
-      try {
-        return entry.getKey() + "=" + URLEncoder.encode(entry.getValue(), "UTF-8");
-      }
-      catch (UnsupportedEncodingException ignore) {
-        return null;
-      }
+      return entry.getKey() + "=" + URLEncoder.encode(entry.getValue(), StandardCharsets.UTF_8);
     }, "&");
   }
 
