@@ -15,15 +15,17 @@
  */
 package com.intellij.tasks.generic;
 
+import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.containers.ContainerUtil;
-import java.util.HashMap;
 import org.apache.commons.httpclient.HttpMethod;
 import org.apache.commons.httpclient.NameValuePair;
 import org.apache.commons.httpclient.methods.PostMethod;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
@@ -71,7 +73,7 @@ public class GenericRepositoryUtil {
       }
       // TODO: add proper escape|unescape property to template variables
       if (escape && !name.equals(GenericRepository.SERVER_URL)) {
-        m.appendReplacement(sb, URLEncoder.encode(replacement, "utf-8"));
+        m.appendReplacement(sb, URLEncoder.encode(replacement, StandardCharsets.UTF_8));
       }
       else {
         m.appendReplacement(sb, replacement);
@@ -88,7 +90,7 @@ public class GenericRepositoryUtil {
     return ContainerUtil.map2List(variables, variable -> String.format("{%s}", variable.getName()));
   }
 
-  public static String prettifyVariableName(String variableName) {
+  public static @NlsContexts.Label String prettifyVariableName(@NlsContexts.Label String variableName) {
     String prettyName = variableName.replace('_', ' ');
     return StringUtil.capitalizeWords(prettyName, true);
   }
